--- a/views/blog.jade
+++ b/views/blog.jade
@@ -9,7 +9,7 @@ block content
    input(type='text', name='blogTitle') 
    br
    b  Body 
-   input(type='text', name='blogBody') 
+   textarea(form='saveBlogFrm', name='blogBody') 
    br
    b  Author 
    input(type='text', name='blogAuthor') 
