--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,6 @@ html
     link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
+    link(rel='stylesheet', href='/stylesheets/custom.css')
   body
     block content
