Fixing issue: Change the files named 'blog' to be a 'blogPost'

--- a/views/post.jade
+++ b/views/post.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div.container
-    form(name='saveBlogFrm', action='/blogs/save', method='post')
+    form(name='saveBlogFrm', action='/posts/save', method='post')
       fieldset
         legend Type your post
         label Post title
