Added 'tags' field for the post

--- a/views/post.jade
+++ b/views/post.jade
@@ -11,5 +11,7 @@ block content
         textarea(id='postBody',name='blogBody')
         label Author
         input(type='text', placeholder='Author', name='blogAuthor')
+        label Tags
+        input(type='text', placeholder='Tags separated by comma', name='blogTags')
         p
-         input.btn(type='submit', value='Create Post')    
+         input.btn(type='submit', value='Create Post')
